@@ -319,7 +319,10 @@ as the tables pointer; that is, \fB/L\fP applies only to the expression on
 which it appears.
 .P
 The \fB/M\fP modifier causes the size of memory block used to hold the compiled
-pattern to be output.
+pattern to be output. This does not include the size of the \fBpcre\fP block; 
+it is just the actual compiled data. If the pattern is successfully studied
+with the PCRE_STUDY_JIT_COMPILE option, the size of the JIT compiled code is 
+also output.
 .P
 If the \fB/S\fP modifier appears once, it causes \fBpcre_study()\fP to be
 called after the expression has been compiled, and the results used when the
@@ -875,6 +878,6 @@ Cambridge CB2 3QH, England.
 .rs
 .sp
 .nf
-Last updated: 26 August 2011
+Last updated: 02 December 2011
 Copyright (c) 1997-2011 University of Cambridge.
 .fi
